force-app/main/default/objects/APT_Site_Inspection__c/APT_Site_Inspection__c.object-meta.xml
<CustomObject>
    <label>Site Inspection</label>
    <nameField>
        <label>Site Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>