force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_DL_1_Up_Level_email_address__c.field-meta.xml
<CustomField>
    <fullName>APT_DL_1_Up_Level_email_address__c</fullName>
    <label>DL 1 Up Level email address</label>
    <type>Email</type>
</CustomField>