force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_Forklift_Available_on_Site__c.field-meta.xml
<CustomField>
    <fullName>APT_Forklift_Available_on_Site__c</fullName>
    <label>Vehicle loaded by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer operated forklift</fullName>
            </value>
            <value>
                <fullName>AP driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>