force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_Preferred_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Preferred_Start_Date__c</fullName>
    <label>Requested Start Date</label>
    <type>Date</type>
</CustomField>