force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_Requested_Collection_Time__c.field-meta.xml
<CustomField>
    <fullName>APT_Requested_Collection_Time__c</fullName>
    <label>Requested Time Window</label>
    <length>50</length>
    <type>Text</type>
</CustomField>