force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_Sales_Rep_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_Rep_Contact_Number__c</fullName>
    <formula>APT_Organisation__r.Owner.Phone</formula>
    <label>Sales Rep Contact Number</label>
    <type>Text</type>
</CustomField>