force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_Sales_Rep_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_Rep_Mobile_Number__c</fullName>
    <label>Sales Rep Mobile Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>