force-app/main/default/objects/APT_Site_Inspection__c/fields/APT_Volume_Loose__c.field-meta.xml
<CustomField>
    <fullName>APT_Volume_Loose__c</fullName>
    <label>Loose Volume (If Loose selected)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>