force-app/main/default/objects/APT_Site_Inspection__c/validationRules/APT_ApprovalDataError.validationRule-meta.xml
<ValidationRule>
    <fullName>APT_ApprovalDataError</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISBLANK( APT_Date_Site_Inspection_Approved__c ) &amp;&amp;  NOT  ISPICKVAL( APT_Site_Inspection_Approved__c , &apos;Approved&apos;)</errorConditionFormula>
    <errorMessage>If you are marking Site Inspection as Approved, please enter date when it was approved. If you are entering date of approval, please make sure to change status of approval to &apos;Approved&apos;</errorMessage>
</ValidationRule>